force-app/main/default/objects/Asset_Event_Work__c/Asset_Event_Work__c.object-meta.xml
<CustomObject>
    <label>איש מקצוע באירוע</label>
    <nameField>
        <displayFormat>AEW-{0000}</displayFormat>
        <label>קוד איש מקצוע באירוע</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>אנשי מקצוע באירוע</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>