force-app/main/default/objects/Asset_Event_Work__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <formula>Assets__r.Asset_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שם</label>
    <type>Text</type>
</CustomField>