force-app/main/default/objects/Asset_Event_Work__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>אנשי מקצוע</label>
    <referenceTo>Assets__c</referenceTo>
    <relationshipName>Assets_Event_Work</relationshipName>
    <type>Lookup</type>
</CustomField>