force-app/main/default/objects/Asset_Event_Work__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>הערות</label>
    <length>255</length>
    <type>Text</type>
</CustomField>