force-app/main/default/objects/Asset_Event_Work__c/fields/Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>דו&quot;ח עבודה יומי</label>
    <referenceTo>Daily_Job_Report__c</referenceTo>
    <relationshipName>Assets_Event_Work</relationshipName>
    <type>Lookup</type>
</CustomField>