force-app/main/default/objects/Asset_Event_Work__c/fields/Incident_Report__c.field-meta.xml
<CustomField>
    <fullName>Incident_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס אירוע</label>
    <referenceTo>Incident_Report__c</referenceTo>
    <relationshipName>Assets_Event_Work</relationshipName>
    <type>Lookup</type>
</CustomField>