force-app/main/default/objects/Asset_Event_Work__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>Assets__r.Asset_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תפקיד</label>
    <type>Text</type>
</CustomField>